# ocean

integrations/harbor/: .env.example  .gitignore  CHANGELOG.md  COMPLIANCE_SUMMARY.md  README.md  integration.py  main.py  pyproject.toml
integrations/harbor/.port/: spec.yaml
integrations/harbor/.port/resources/: blueprints.json  port-app-config.yml
integrations/harbor/harbor/: __init__.py
integrations/harbor/harbor/clients/: __init__.py  harbor_client.py
integrations/harbor/harbor/core/: __init__.py  exporters.py
integrations/harbor/harbor/helpers/: __init__.py  utils.py
integrations/harbor/harbor/webhook_processors/: __init__.py  artifact_processor.py  base_processor.py  project_processor.py  repository_processor.py
integrations/harbor/tests/: test_harbor_client.py  test_harbor_integration.py
